--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,8 +19,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
 
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": false
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
 }
